...
            android:text="Log Out" />

    </LinearLayout>

    <!-- Button to navigate to lobbies -->
    <Button
        android:id="@+id/navigateToLobbiesButton"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Go to Lobbies" />

    <Button
        android:id="@+id/createLobby"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Create Lobby" />

...
